# LunaOS-ARM64

./: CMakeLists.txt  Makefile  README.md  fix-build-xnu.py
apps/files/: CMakeLists.txt  app.desktop  luna-files.c
apps/terminal/: build-foot.sh
apps/text-editor/: CMakeLists.txt  app.desktop  luna-editor.c
cmake/: libdrm.pc.in
compositor/: CMakeLists.txt
compositor/include/: luna-compositor.h
compositor/src/: main.c
drm-shim/include/: drm_darwin.h  libdrm-darwin.h
drm-shim/kern/: IODRMShim.cpp  IODRMShim.entitlements  Info.plist
drm-shim/user/: libdrm-darwin.c
evdev-bridge/: darwin-evdev-bridge.c  linux-input-event-codes.h
graphics/config/: graphics-config.mk
graphics/include/: darwin-gbm.c  gbm.h
graphics/patches/mesa/: 0001-darwin-arm64-platform.patch  0002-agx-darwin-stub.patch  0003-lavapipe-arm64-darwin.patch
graphics/patches/vulkan-loader/: 0001-darwin-arm64.patch
graphics/scripts/: build-graphics.sh  verify-graphics.sh
kernel/config/: com.apple.Boot.plist  kernel-config.mk
kernel/patches/: 0001-arm64-lunaos-config.patch
kernel/scripts/: build-xnu.sh  build-xnu.sh.bak  verify-kernel.sh
libwayland-darwin/: wayland-darwin-event-loop.c
patches/wlroots/: 0001-drm-darwin-arm64-backend.patch
scripts/: build-compositor.sh
seatd-darwin/: seatd-darwin.c
shell/: CMakeLists.txt
shell/include/: luna-shell.h
shell/src/: luna-launcher-wallpaper.c  luna-panel.c  luna-shell-main.c
userland/config/: components.txt
userland/rootfs-skel/private/etc/: fstab  group  hostname  passwd  rc.lunaos
userland/scripts/: build-iso.sh  build-userland.sh  verify-rootfs.sh
