cmake_minimum_required(VERSION 3.18)
project(luna-editor VERSION 0.1.0 LANGUAGES C)
set(CMAKE_OSX_ARCHITECTURES "arm64" CACHE STRING "" FORCE)
set(CMAKE_C_STANDARD 11)
find_package(PkgConfig REQUIRED)
pkg_check_modules(WAYLAND REQUIRED wayland-client)
add_executable(luna-editor luna-editor.c)
target_compile_options(luna-editor PRIVATE -arch arm64)
target_link_options(luna-editor PRIVATE -arch arm64)
target_include_directories(luna-editor PRIVATE ${WAYLAND_INCLUDE_DIRS})
target_link_libraries(luna-editor ${WAYLAND_LIBRARIES})
install(TARGETS luna-editor RUNTIME DESTINATION bin)
install(FILES app.desktop DESTINATION share/applications)
